--- a/Erros.html
+++ b/Erros.html
@@ -24,7 +24,7 @@
                     <li class="item-menu"><a class="link-menu" href="#.html" class="menu-header-items">Home</a></li>
                     <li class="item-menu"><a class="link-menu" href="#.html">
                             <class="menu-header-items">Horários</a> </li>
-                    <li class="item-menu"><a class="link-menu" href="#.html"
+                    <li class="item-menu"><a class="link-menu" href="Erros.html"
                             class="menu-header-items">Erros</a></li>
                     <li class="item-menu"><a class="link-menu" href="#.html" class="menu-header-items">Códigos
                             Itinerário</a></li>
@@ -82,10 +82,10 @@
                 <iframe src="https://drive.google.com/file/d/1vI3pkO2HTy1hu5z1Zkh_NKvHxmcqtMJG/preview" width="640" height="480" allow="autoplay"></iframe>
             </div>
 
-            <div class="terminal" onclick="showHide ('#tci')">
+            <div class="terminal" onclick="showHide ('#tvx')">
                 <h2>Terminal Vivi Xavier (TVX)</h2> 
             </div>
-            <div class="descricao-terminal" id="tci">
+            <div class="descricao-terminal" id="tvx">
                    <p>Carro desta linha registra chegada e saída ao mesmo tempo sem ao mesmo estrar no terminal vivi xavier</p>     
                 <iframe src="https://drive.google.com/file/d/1hUScsg0IaFPWn3lb5TawPxQ7EUld8-QI/preview" width="640" height="480" allow="autoplay"></iframe>
                 <iframe src="https://drive.google.com/file/d/1YOicH5BdyDUt2pbf5DOV_Zvh2wZi8loH/preview" width="640" height="480" allow="autoplay"></iframe>
