--- a/Erros.html
+++ b/Erros.html
@@ -96,7 +96,7 @@
 
         
             <div class="terminal" onclick="showHide ('#tci')">
-                <h2>Terminal Central Piso Inferior (TCI)</h2>
+                <h2>T. Central Piso Inferior (TCI)</h2>
             </div>
             <div class="descricao-terminal" id="tci">
                 <h3>Veículo não registrou no terminal central</h3>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="terminal" onclick="showHide ('#tcs')">
-                <h2>Terminal Central Piso Superior (TCS)</h2>
+                <h2>T. Central Piso Superior (TCS)</h2>
             </div>
             <div class="descricao-terminal" id="tcs">
                 <p>25/11/2024 - carro 3372 chega no horário porém o sitema registra como atraso</p>
